--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "buildCommand": "npm --prefix app run build",
-  "outputDirectory": "app/.next",
-  "installCommand": "npm --prefix app install",
-  "framework": "nextjs" 
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install",
+  "rootDirectory": "app",
+  "framework": "nextjs"
 }
