--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "rootDirectory": "app",
-  "framework": "nextjs"
+  "installCommand": "npm install"
 }
