--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
   "framework": "nextjs",
   "buildCommand": "npm run build",
   "installCommand": "npm install",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "crons": [
+    {
+      "path": "/api/notifications/due-date",
+      "schedule": "0 9 * * *"
+    }
+  ]
 }
